test/error/earlybreak.lua
while true do
	break;
	local a = 1;
end
